// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addImportantToEachRule() should add !important to each rule 1`] = `
{
  "&:hover": {
    "&:focus": {
      "color": "orange !important",
    },
    "color": "blue !important",
  },
  "color": "red !important",
  "content": """ !important",
  "display": "block !important",
  "margin": "0 !important",
}
`;

exports[`focusPseudoJssStyle should return correct jss style 1`] = `
{
  "&::before": {
    "bottom": 0,
    "content": """",
    "left": 0,
    "position": "absolute",
    "right": 0,
    "top": 0,
  },
  "&:focus::before": {
    "borderRadius": "1px",
    "outline": "2px solid #1A44EA",
    "outlineOffset": "2px",
  },
  "&:focus:not(:focus-visible)::before": {
    "outline": 0,
  },
  "outline": 0,
}
`;

exports[`getBackfaceVisibilityJssStyle() should return correct styles 1`] = `
{
  "WebkitBackfaceVisibility": "hidden",
  "backfaceVisibility": "hidden",
}
`;

exports[`getFrostedGlassBackgroundJssStyles() should return correct JssStyle for isVisible: false, duration: moderate and theme: dark 1`] = `
{
  "&::before": {
    "WebkitBackdropFilter": "blur(0px)",
    "backdropFilter": "blur(0px)",
    "background": "rgba(38, 38, 41, 0.67)",
    "bottom": 0,
    "content": """",
    "left": 0,
    "opacity": 0,
    "pointerEvents": "none",
    "position": "fixed",
    "right": 0,
    "top": 0,
    "transition": "opacity var(--p-transition-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1), backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1), -webkit-backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1)",
  },
}
`;

exports[`getFrostedGlassBackgroundJssStyles() should return correct JssStyle for isVisible: false, duration: veryLong and theme: dark 1`] = `
{
  "&::before": {
    "WebkitBackdropFilter": "blur(0px)",
    "backdropFilter": "blur(0px)",
    "background": "rgba(38, 38, 41, 0.67)",
    "bottom": 0,
    "content": """",
    "left": 0,
    "opacity": 0,
    "pointerEvents": "none",
    "position": "fixed",
    "right": 0,
    "top": 0,
    "transition": "opacity var(--p-transition-duration, 1.2s) cubic-bezier(0.25,0.1,0.25,1), backdrop-filter var(--p-transition-duration, 1.2s) cubic-bezier(0.25,0.1,0.25,1), -webkit-backdrop-filter var(--p-transition-duration, 1.2s) cubic-bezier(0.25,0.1,0.25,1)",
  },
}
`;

exports[`getFrostedGlassBackgroundJssStyles() should return correct JssStyle for isVisible: true, duration: long and theme: light 1`] = `
{
  "&::before": {
    "WebkitBackdropFilter": "blur(32px)",
    "backdropFilter": "blur(32px)",
    "background": "rgba(1, 2, 5, 0.67)",
    "bottom": 0,
    "content": """",
    "left": 0,
    "opacity": 1,
    "pointerEvents": "none",
    "position": "fixed",
    "right": 0,
    "top": 0,
    "transition": "opacity var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1)",
  },
}
`;

exports[`getFrostedGlassBackgroundJssStyles() should return correct JssStyle for isVisible: true, duration: short and theme: light 1`] = `
{
  "&::before": {
    "WebkitBackdropFilter": "blur(32px)",
    "backdropFilter": "blur(32px)",
    "background": "rgba(1, 2, 5, 0.67)",
    "bottom": 0,
    "content": """",
    "left": 0,
    "opacity": 1,
    "pointerEvents": "none",
    "position": "fixed",
    "right": 0,
    "top": 0,
    "transition": "opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), backdrop-filter var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), -webkit-backdrop-filter var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)",
  },
}
`;

exports[`getHiddenTextStyles() should return correct JssStyle for isHidden: false and shownStyles: { width: 'fit-content' } 1`] = `
{
  "clip": "auto",
  "height": "auto",
  "margin": 0,
  "overflow": "visible",
  "padding": 0,
  "position": "static",
  "whiteSpace": "normal",
  "width": "fit-content",
}
`;

exports[`getHiddenTextStyles() should return correct JssStyle for isHidden: false and shownStyles: undefined 1`] = `
{
  "clip": "auto",
  "height": "auto",
  "margin": 0,
  "overflow": "visible",
  "padding": 0,
  "position": "static",
  "whiteSpace": "normal",
  "width": "auto",
}
`;

exports[`getHiddenTextStyles() should return correct JssStyle for isHidden: true and shownStyles: { width: 'fit-content' } 1`] = `
{
  "clip": "rect(0,0,0,0)",
  "height": "1px",
  "margin": "-1px",
  "overflow": "hidden",
  "padding": 0,
  "position": "absolute",
  "whiteSpace": "nowrap",
  "width": "1px",
}
`;

exports[`getHiddenTextStyles() should return correct JssStyle for isHidden: true and shownStyles: undefined 1`] = `
{
  "clip": "rect(0,0,0,0)",
  "height": "1px",
  "margin": "-1px",
  "overflow": "hidden",
  "padding": 0,
  "position": "absolute",
  "whiteSpace": "nowrap",
  "width": "1px",
}
`;

exports[`getInsetJssStyle() should return correct JssStyle for parameter: 'auto' 1`] = `
{
  "bottom": "auto",
  "left": "auto",
  "right": "auto",
  "top": "auto",
}
`;

exports[`getInsetJssStyle() should return correct JssStyle for parameter: -1 1`] = `
{
  "bottom": "-1px",
  "left": "-1px",
  "right": "-1px",
  "top": "-1px",
}
`;

exports[`getInsetJssStyle() should return correct JssStyle for parameter: 2 1`] = `
{
  "bottom": "2px",
  "left": "2px",
  "right": "2px",
  "top": "2px",
}
`;

exports[`getInsetJssStyle() should return correct JssStyle for parameter: undefined 1`] = `
{
  "bottom": 0,
  "left": 0,
  "right": 0,
  "top": 0,
}
`;

exports[`getTransition() should for : 'box-shadow var(--p-transition-duration, 0.6s) cubic-bezier(0.4,0,0.5,1) var(--p-transition-duration, 0.6s)' return: box-shadow: box-shadow var(--p-transition-duration, 0.6s) cubic-bezier(0.4,0,0.5,1) var(--p-transition-duration, 0.6s) 1`] = `"box-shadow var(--p-transition-duration, 0.6s) cubic-bezier(0.4,0,0.5,1) var(--p-transition-duration, 0.6s)"`;

exports[`getTransition() should for : 'box-shadow var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) var(--p-transition-duration, 0.25s)' return: box-shadow: box-shadow var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) var(--p-transition-duration, 0.25s) 1`] = `"box-shadow var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) var(--p-transition-duration, 0.25s)"`;

exports[`getTransition() should for : 'color var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1) var(--p-transition-duration, 0.4s)' return: color: color var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1) var(--p-transition-duration, 0.4s) 1`] = `"color var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1) var(--p-transition-duration, 0.4s)"`;

exports[`getTransition() should for : 'color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)' return: color: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) 1`] = `"color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1)"`;

exports[`getTransition() should for : 'color var(--p-transition-duration, 1.2s) linear var(--p-transition-duration, 1.2s)' return: color: color var(--p-transition-duration, 1.2s) linear var(--p-transition-duration, 1.2s) 1`] = `"color var(--p-transition-duration, 1.2s) linear var(--p-transition-duration, 1.2s)"`;
